# super_mario_kart_recompilation

./: CMakeLists.txt  LICENSE  README.md  Recompiler.cpp  Recompiler.hpp  Utils.cpp  Utils.hpp  main.cpp  smk_main.cpp  smk_main.hpp
Recompiler/: Recompiler.cpp  Recompiler.hpp  main.cpp
dma/: Dma.cpp  Dma.hpp
dsp/: dsp.h
hardware/: hardware.cpp  hardware.hpp
hardware/dma/: Dma.cpp  Dma.hpp
hardware/dsp/: dsp1.cpp
hardware/ppu/: ppu.cpp  ppu.hpp
